1s - Many improvements to the manipulations for the practical part

--- a/notebooks/1-introduction_shorter/building_classification.ipynb
+++ b/notebooks/1-introduction_shorter/building_classification.ipynb
@@ -11,6 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To open this notebook with Google Colab, click on the following link:\n",
+    "\n",
+    "[Open in Google Colab](https://colab.research.google.com/github/sogelink-research/ML-Course/blob/main/notebooks/1-introduction_shorter/building_classification.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Import necessary stuff for Google Colab"
    ]
   },
@@ -111,16 +120,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import datetime\n",
-    "\n",
-    "\n",
-    "def get_new_model_name() -> str:\n",
-    "    return datetime.datetime.now().strftime(\"%y%m%d_%H%M%S\")"
+    "## Import the necessary libraries"
    ]
   },
   {
@@ -130,70 +133,42 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from simple_model.dataloader import ImagesLoader\n",
-    "from simple_model.nn import SegmentationConvolutionalNetwork\n",
-    "from simple_model.dataparse import download_all\n",
+    "\n",
     "from simple_model.bbox import BboxInt\n",
-    "import torch\n",
+    "from simple_model.dataloader import ImagesLoader\n",
+    "from simple_model.dataparse import download_all, tile_image\n",
+    "from simple_model.nn import SegmentationConvolutionalNetwork, get_new_model_name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define the parameters\n",
     "\n",
-    "minx, maxy, maxx, miny = 120000, 487000, 125000, 482000\n",
-    "bbox = BboxInt(minx, maxy, maxx, miny, True)\n",
-    "image_size = 512\n",
-    "filter_buildings = True\n",
-    "main_data_folder = Path(\"data\")\n",
-    "main_models_folder = Path(\"models\")\n",
+    "| Name | Type | Possible values | Description | Advice |\n",
+    "| ---- | ---- | --------------- | ----------- | ------------ |\n",
+    "| minx, maxy, maxx, miny | **integers** | Coordinates in EPSG:7415 in the Netherlands. | Coordinates of the bounding box of the area that will be used to train the model | Larger area means more data so potentially better final model but longer to train. |\n",
+    "| filter_buildings | boolean | Any | Whether to filter out small buildings in the dataset (area < 30m² and \"gebruiksdoel\" undefined). | Keep it true. |\n",
+    "| image_size | integer | > 0 | Size of the images processed by the model (they will be (image_size×image_size)). | Since the image size is divided multiple times by 2, it is necessary to use a multiple of 2 with high-enough multiplicity. |\n",
+    "| nodata | float | Any | Value to replace NO_DATA with. | This value will be used to replace any missing pixel, mainly water but also potential holes in the data in buildings, roads, etc. |\n",
+    "| encoder_channels | list of integers | > 0 | Number of channels in the successive steps of the encoder. This also defines the number of steps. | More channels mean larger model with longer training and running time, but potentially better capabilities. Usually, the values inside are increasing, to capture more and more features at each step. |\n",
+    "| layers_downsample | integer | > 0 | Number of convolutional layers each step the encoder. | More layers should be able to extract more information, at the cost of a larger model. |\n",
+    "| layers_upsample | integer | > 0 | Number of convolutional layers each step the decoder. | More layers should be able to better combiner information, at the cost of a larger model. |\n",
+    "| batch_size | integer | > 0 | Size of the batches (number of images processed at once). | Larger batches mean more images processed before each training step, meaning less steps per epoch, but potentially \"better\" steps thanks to processing more images. The available memory of the GPU, in relation to the other parameters, define the maximum possible value for a given model and a given GPU. |\n",
+    "| train_proportion | float | Between 0 and 1 | Proportion of the data used for training. The rest is used for validation during training, to assess the current model on data that it wasn't trained on. | You usually want to use most of the data for training, but still want enough to get a decent evaluation. |\n",
+    "| max_epochs | integer | > 0 | Maximum number of iterations to train the model. Each iteration goes through the whole dataset. | You usually want this value to be high enough for the model to be as optimised as possible. Here you can interrupt the training when you want, but this can be an important parameter when training a model without monitoring the process. |\n",
+    "| stop_early_after | integer | > 0 | Number of epochs without improvement before stopping the training. Prevents running for all the given epochs when the model doesn't seem to be improving any more. | A larger value prevents stopping too early if the model could still improve despite temporarily not improving. But it also means that the training won't stop as early if the model is really stuck. |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To view the data online and select one or multiple areas to work on, you can use:\n",
     "\n",
-    "main_data_folder.mkdir(parents=True, exist_ok=True)\n",
-    "main_models_folder.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "data_folder, images_path, masks_path = download_all(\n",
-    "    bbox, main_data_folder, image_size, filter_buildings\n",
-    ")\n",
-    "\n",
-    "image_shape = (image_size, image_size)\n",
-    "nodata = 0\n",
-    "\n",
-    "images_loader = ImagesLoader(image_shape=image_shape, nodata=nodata)\n",
-    "images_loader.load_data(images_path, masks_path)\n",
-    "dataloaders = images_loader.get_dataloaders(batch_size=8, train_proportion=0.8)\n",
-    "\n",
-    "model_name = get_new_model_name()\n",
-    "model_folder = main_models_folder / model_name\n",
-    "model_folder.mkdir(parents=True, exist_ok=True)\n",
-    "model = SegmentationConvolutionalNetwork(\n",
-    "    image_size=image_shape,\n",
-    "    encoder_channels=[16, 32, 64],\n",
-    "    layers_downsample=2,\n",
-    "    layers_upsample=2,\n",
-    "    input_channels=1,\n",
-    "    model_folder=model_folder,\n",
-    "    data_folders=[data_folder],\n",
-    ")\n",
-    "\n",
-    "# Better speed for CPU\n",
-    "torch.compile(model)\n",
-    "\n",
-    "visualisation_output = model_folder / \"visualisation\" / \"output.png\"\n",
-    "model.train_model(\n",
-    "    dataloaders=dataloaders,\n",
-    "    epochs=200,\n",
-    "    visualisation_output=visualisation_output,\n",
-    "    stop_early_after=20,\n",
-    ")\n",
-    "\n",
-    "output_folder = model_folder / \"output\"\n",
-    "model.save_predictions(\n",
-    "    images_loader=images_loader,\n",
-    "    dataloaders=dataloaders,\n",
-    "    output_folder=output_folder,\n",
-    ")\n",
-    "metrics_folder = model_folder / \"metrics\"\n",
-    "model.save_metrics(\n",
-    "    images_loader=images_loader,\n",
-    "    dataloaders=dataloaders,\n",
-    "    metrics_folder=metrics_folder,\n",
-    ")\n",
-    "model.save_weights()"
+    "- This website to view the data and select coordinates (using the \"Measurements\" tool) in the bottom right: <https://app.ellipsis-drive.com/view?pathId=78080fff-8bcb-4258-bb43-be9de956b3e0>\n",
+    "- This website to convert coordinates to EPSG:7415: <https://epsg.io/transform#s_srs=4326&t_srs=7415&x=NaN&y=NaN>"
    ]
   },
   {
@@ -202,12 +177,242 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model2 = SegmentationConvolutionalNetwork.load_model(model_folder)\n",
-    "# model2.save_predictions(\n",
-    "#     images_loader=images_loader,\n",
-    "#     dataloaders=dataloaders,\n",
-    "#     output_folder=output_folder,\n",
-    "# )"
+    "# ------------------------------ Data selection ------------------------------ #\n",
+    "minx_miny_maxx_maxy = [\n",
+    "    (None, None, None, None),\n",
+    "    (None, None, None, None),\n",
+    "    ...,\n",
+    "]  # Coordinates of the areas of interest (minx, maxy, maxx, miny)\n",
+    "filter_buildings = True  # True to filter small buildings\n",
+    "\n",
+    "# ----------------------------- Data preparation ----------------------------- #\n",
+    "image_size = None  # Size of the images processed by the model\n",
+    "nodata = None  # Value to replace nodata with\n",
+    "\n",
+    "# ----------------------------- Model parameters ----------------------------- #\n",
+    "encoder_channels = [None, None, ...]  # Number of channels in the encoder and decoder\n",
+    "layers_downsample = None  # Number of convolutional layers in the encoder\n",
+    "layers_upsample = None  # Number of convolutional layers in the decoder\n",
+    "\n",
+    "# ---------------------------- Training parameters --------------------------- #\n",
+    "batch_size = None  # Size of the batches (number of images processed at once)\n",
+    "train_proportion = None  # Proportion of the data used for training\n",
+    "\n",
+    "max_epochs = None  # Maximum number of iterations to train the model\n",
+    "stop_early_after = (\n",
+    "    None  # Number of epochs without improvement before stopping the training\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download the training data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Create the bounding box\n",
+    "# bbox = BboxInt(minx, maxy, maxx, miny, True)\n",
+    "\n",
+    "# Create the bounding boxes\n",
+    "bboxes = [\n",
+    "    BboxInt(minx, miny, maxx, maxy, True)\n",
+    "    for (minx, miny, maxx, maxy) in minx_miny_maxx_maxy\n",
+    "]\n",
+    "\n",
+    "# Download the data\n",
+    "main_data_folder = Path(\"data\")\n",
+    "main_models_folder = Path(\"models\")\n",
+    "\n",
+    "main_data_folder.mkdir(parents=True, exist_ok=True)\n",
+    "main_models_folder.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "data_folders = []\n",
+    "full_image_paths = []\n",
+    "full_mask_paths = []\n",
+    "for bbox in bboxes:\n",
+    "    # Download the data\n",
+    "    print(f\"Downloading data for {bbox}\")\n",
+    "    data_folder, full_image_path, full_mask_path = download_all(\n",
+    "        bbox, main_data_folder, filter_buildings\n",
+    "    )\n",
+    "    data_folders.append(data_folder)\n",
+    "    full_image_paths.append(full_image_path)\n",
+    "    full_mask_paths.append(full_mask_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepare the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tile the images and masks\n",
+    "images_paths = []\n",
+    "masks_paths = []\n",
+    "for full_image_path in full_image_paths:\n",
+    "    images_path = tile_image(full_image_path, tile_size=image_size)\n",
+    "    images_paths.append(images_path)\n",
+    "\n",
+    "for full_mask_path in full_mask_paths:\n",
+    "    masks_path = tile_image(full_mask_path, tile_size=image_size)\n",
+    "    masks_paths.append(masks_path)\n",
+    "\n",
+    "# Create the images loader\n",
+    "image_shape = (image_size, image_size)\n",
+    "images_loader = ImagesLoader(image_shape=image_shape, nodata=nodata)\n",
+    "for data_folder, images_path, masks_path in zip(\n",
+    "    data_folders, images_paths, masks_paths\n",
+    "):\n",
+    "    images_loader.load_data(data_folder, images_path, masks_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialise the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name = get_new_model_name()\n",
+    "model_folder = main_models_folder / model_name\n",
+    "model_folder.mkdir(parents=True, exist_ok=True)\n",
+    "model = SegmentationConvolutionalNetwork(\n",
+    "    image_shape=image_shape,\n",
+    "    encoder_channels=encoder_channels,\n",
+    "    layers_downsample=layers_downsample,\n",
+    "    layers_upsample=layers_upsample,\n",
+    "    input_channels=1,\n",
+    "    model_folder=model_folder,\n",
+    "    data_folders=data_folders,\n",
+    ")\n",
+    "\n",
+    "# # Better speed for CPU\n",
+    "# torch.compile(model)\n",
+    "model.plot_model()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the dataloaders with proper configuration\n",
+    "train_val_dataloaders = images_loader.get_dataloaders(\n",
+    "    batch_size=batch_size, train_proportion=train_proportion\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train the model\n",
+    "model.train_model(\n",
+    "    dataloaders=train_val_dataloaders,\n",
+    "    max_epochs=max_epochs,\n",
+    "    stop_early_after=stop_early_after,\n",
+    "    save_weights=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute and save the model predictions\n",
+    "output_folder = model_folder / \"output\"\n",
+    "model.save_predictions(\n",
+    "    images_loader=images_loader,\n",
+    "    dataloaders=train_val_dataloaders,\n",
+    "    output_folder=output_folder,\n",
+    ")\n",
+    "\n",
+    "# Compute and save the model metrics\n",
+    "metrics_folder = model_folder / \"metrics\"\n",
+    "model.save_metrics(\n",
+    "    images_loader=images_loader,\n",
+    "    dataloaders=train_val_dataloaders,\n",
+    "    metrics_folder=metrics_folder,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Zip the results to download locally"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Zip the model folder\n",
+    "if IN_COLAB:\n",
+    "    import shutil\n",
+    "\n",
+    "    shutil.make_archive(\n",
+    "        model_folder, \"zip\", root_dir=model_folder.parent, base_dir=model_folder.name\n",
+    "    )\n",
+    "    print(f\"Model saved at {model_folder}.zip\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load a previously trained model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model_folder = Path(\"models/250409_232909\")\n",
+    "# model = SegmentationConvolutionalNetwork.load_model(model_folder=model_folder)"
    ]
   }
  ],
